--- a/css/main.css
+++ b/css/main.css
@@ -1,6 +1,6 @@
 :root {
-  --color-primary: red;
-  --border-radius: 4px;
+  --color-primary: #f39;
+  --border-radius: 14px 0 14px 0;
   --font-primary: sans-serif;
   --font-secondary: "Roboto Slab", sans-serif;
 }
@@ -13,7 +13,7 @@ html {
   max-width: 24em;
 
   border: 3px solid red;
-  border-radius: 4px;
+  border-radius: var(--border-radius);
 }
 
 .card-title {
